fix: 🐛 Remove justified spacing for main nav
The justified spacing for main nav was causing multi-word items to drop to two lines and look hideous. This fix restores left-alignment of the main nav items, and increases the gap between items. The increased spacing is necessary because nav items are uppercase and can be hard to read if they are not spearated by enough space to create clear visual word boundaries. Long nav lists will now break to two lines, which is not ideal, but keeps the nav readable.

--- a/src/sass/components/_navigation-site.scss
+++ b/src/sass/components/_navigation-site.scss
@@ -15,8 +15,8 @@
 #mainNav,
 .site-nav {
   display:flex;
-  justify-content: space-between;
-  gap: .25em;
+  justify-content: flex-start;
+  gap: 1em  2.5em;
   padding:0;
   margin:0;
   flex-direction: column;
@@ -24,6 +24,7 @@
   @include media($tablet) {
 
     flex-direction: row;
+    flex-wrap: wrap;
 
   }
 
